force-app/main/default/objects/Social_Engagement__c/Social_Engagement__c.object-meta.xml
<CustomObject>
    <description>Track all social sharing and engagement for moments</description>
    <label>Social Engagement</label>
    <nameField>
        <label>Engagement Name</label>
        <type>AutoNumber</type>
        <displayFormat>SE-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Social Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>