force-app/main/default/objects/Social_Engagement__c/fields/Campaign_Medium__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Medium__c</fullName>
    <label>Campaign Medium</label>
    <type>Text</type>
    <length>100</length>
    <description>UTM medium parameter</description>
</CustomField>