force-app/main/default/objects/Social_Engagement__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <type>Text</type>
    <length>100</length>
    <description>UTM campaign parameter</description>
</CustomField>