force-app/main/default/objects/Social_Engagement__c/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <label>Campaign Source</label>
    <type>Text</type>
    <length>100</length>
    <description>UTM source parameter</description>
</CustomField>