force-app/main/default/objects/Social_Engagement__c/fields/Commentary_Event__c.field-meta.xml
<CustomField>
    <fullName>Commentary_Event__c</fullName>
    <label>Commentary Event</label>
    <type>Lookup</type>
    <referenceTo>Commentary_Event__c</referenceTo>
    <relationshipLabel>Social Engagements</relationshipLabel>
    <relationshipName>Social_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>