force-app/main/default/objects/Social_Engagement__c/fields/Engagement_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Engagement_DateTime__c</fullName>
    <label>Engagement DateTime</label>
    <type>DateTime</type>
    <required>true</required>
    <description>When the engagement occurred</description>
</CustomField>