force-app/main/default/objects/Social_Engagement__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Share</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Like</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Click</fullName>
            </value>
            <value>
                <fullName>Embed_View</fullName>
                <label>Embed View</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of engagement action</description>
</CustomField>