force-app/main/default/objects/Social_Engagement__c/fields/Fixture__c.field-meta.xml
<CustomField>
    <fullName>Fixture__c</fullName>
    <label>Fixture</label>
    <type>Lookup</type>
    <referenceTo>Fixture__c</referenceTo>
    <relationshipLabel>Social Engagements</relationshipLabel>
    <relationshipName>Social_Engagements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>