force-app/main/default/objects/Social_Engagement__c/fields/Referrer_URL__c.field-meta.xml
<CustomField>
    <fullName>Referrer_URL__c</fullName>
    <label>Referrer URL</label>
    <type>Url</type>
    <description>Where the user came from</description>
</CustomField>