force-app/main/default/objects/Social_Engagement__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <type>Text</type>
    <length>100</length>
    <description>Session identifier</description>
</CustomField>