force-app/main/default/objects/Social_Engagement__c/fields/User_Identifier__c.field-meta.xml
<CustomField>
    <fullName>User_Identifier__c</fullName>
    <label>User Identifier</label>
    <type>Text</type>
    <length>100</length>
    <description>Anonymized user hash for privacy</description>
</CustomField>